// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectPlatformRoles should get standard roles, then return it mapped and filtered 1`] = `
Array [
  Object {
    "label": "Role Mock 2",
    "value": "mockId2",
  },
  Object {
    "label": "Role Mock 1",
    "value": "mockId",
  },
]
`;

exports[`selectTenantRoles should get roles, then return it mapped and filtered 1`] = `
Array [
  undefined,
  Object {
    "label": "Role Mock 1",
    "value": "mockId",
  },
  Object {
    "label": "Role Mock 2",
    "value": "mockId2",
  },
]
`;
